--- a/Reddit/app/src/main/AndroidManifest.xml
+++ b/Reddit/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     a disconnected to a connected network state.
     -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!--I added -->
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
             android:allowBackup="true"
